[package]
name = "compressed_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
serde = {version = "*", features = ['derive']}


[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

 [[bench]]
name = "my_bench"
harness = false

