[package]
name = "compressed_set"
description = "Crate for storing number sequences with outliners memeory efficiently"
repository = "https://github.com/JojiiOfficial/CompressedSet"
license = "AGPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.148", features = ['derive']}

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

 [[bench]]
name = "my_bench"
harness = false
